--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.16",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "concurrently": "^7.6.0",
@@ -34,6 +35,7 @@
     "express-validator": "^6.14.3",
     "http-status": "^1.6.2",
     "knex": "^2.4.2",
+    "morgan": "^1.10.0",
     "objection": "^3.0.1",
     "pg": "^8.8.0"
   },
